<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BarberRegister">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editBarberFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/barberFirstName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editBarberLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/barberLastName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editPhoneBarber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/insertPhone"
            android:minHeight="48dp" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editBarberLocationAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/insertAdress"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/editBarberEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/insertEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:minHeight="48dp" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editBarberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/insertPassword"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <Button
            android:layout_gravity="center"
            android:id="@+id/BSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue"
            android:text="@string/chooseImage"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/IVPreviewImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />


    </LinearLayout>

    <Button
        android:id="@+id/buttonRegisterBarber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registerTitle" />

</LinearLayout>